--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ao_gosto_app
 description: "O app oficial da Ao Gosto Carnes — sua boutique de carnes premium em Belo Horizonte. Peça seus cortes favoritos, kits de churrasco e produtos exclusivos com poucos toques. Experiência gourmet, entrega expressa e o verdadeiro sabor ao seu gosto."
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -17,6 +17,7 @@ dependencies:
   shared_preferences: ^2.2.3
   mask_text_input_formatter: ^2.8.0
   provider: ^6.0.5
+  url_launcher: ^6.2.0
 
 dev_dependencies:
   flutter_test:
