--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   mask_text_input_formatter: ^2.8.0
   provider: ^6.0.5
   url_launcher: ^6.2.0
+  cloud_firestore: ^4.17.5
 
 dev_dependencies:
   flutter_test:
