pagina pedidos ok

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,7 @@
-# Definição global do iOS mínimo
-platform :ios, '13.0'
+# Uncomment this line to define a global platform for your project
+# platform :ios, '12.0'
 
-# Desabilitar analytics do Cocoapods
+# CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'Runner', {
@@ -31,18 +31,14 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
-  flutter_install_all_ios_pods(File.dirname(File.realpath(__FILE__)))
-
+  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   target 'RunnerTests' do
     inherit! :search_paths
   end
 end
 
-# === FORÇA TODOS OS PODS A USAREM iOS 13 ===
 post_install do |installer|
   installer.pods_project.targets.each do |target|
-    target.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
-    end
+    flutter_additional_ios_build_settings(target)
   end
 end
