--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,12 @@ dependencies:
   mask_text_input_formatter: ^2.8.0
   provider: ^6.0.5
   url_launcher: ^6.2.0
-  cloud_firestore: ^4.17.5
+  cloud_firestore: ^4.16.1
   firebase_core: ^2.32.0
   lottie: ^3.1.0
+  image_picker: ^1.2.1
+  permission_handler: ^11.3.1
+  device_info_plus: ^10.1.0
 
 dev_dependencies:
   flutter_test:
