--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,13 +17,15 @@ dependencies:
   shared_preferences: ^2.2.3
   mask_text_input_formatter: ^2.8.0
   provider: ^6.0.5
-  url_launcher: ^6.2.0
+  url_launcher: ^6.3.2
   cloud_firestore: ^4.16.1
   firebase_core: ^2.32.0
   lottie: ^3.1.0
   image_picker: ^1.2.1
   permission_handler: ^11.3.1
   device_info_plus: ^10.1.0
+  collection: ^1.18.0
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
