--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ao_gosto_app
 description: "O app oficial da Ao Gosto Carnes — sua boutique de carnes premium em Belo Horizonte. Peça seus cortes favoritos, kits de churrasco e produtos exclusivos com poucos toques. Experiência gourmet, entrega expressa e o verdadeiro sabor ao seu gosto."
 publish_to: 'none'
-version: 1.0.0+3
+version: 1.0.0+8
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -26,6 +26,7 @@ dependencies:
   device_info_plus: ^10.1.0
   collection: ^1.18.0
   geolocator: ^14.0.2
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -41,8 +42,10 @@ flutter:
   # 🔹 Diretórios de assets (ícones e imagens gerais)
   assets:
     - assets/icon/app_icon.png
+    - assets/icons_category/
     - assets/images/
     - assets/lottie/empty_box.json
+    - assets/lottie/LogoSplashScreen.json
 
 # 🔹 Configuração do flutter_launcher_icons
 flutter_icons:
