--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
-# Define a versão mínima global do iOS
-platform :ios, '13.0'
+# Uncomment this line to define a global platform for your project
+# platform :ios, '13.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -29,10 +29,8 @@ flutter_ios_podfile_setup
 
 target 'Runner' do
   use_frameworks!
-  use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-
   target 'RunnerTests' do
     inherit! :search_paths
   end
@@ -40,24 +38,6 @@ end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
-    # 👉 Remendo pro erro do '-G' no BoringSSL-GRPC
-    if target.name == 'BoringSSL-GRPC'
-      target.source_build_phase.files.each do |file|
-        if file.settings && file.settings['COMPILER_FLAGS']
-          flags = file.settings['COMPILER_FLAGS'].split
-          # Remove o flag problemático que vira '-G'
-          flags.reject! { |flag| flag == '-GCC_WARN_INHIBIT_ALL_WARNINGS' }
-          file.settings['COMPILER_FLAGS'] = flags.join(' ')
-        end
-      end
-    end
-
-    # Config extra padrão do Flutter
     flutter_additional_ios_build_settings(target)
-
-    # Garante iOS 13+ em todos os pods
-    target.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
-    end
   end
 end
