--- a/public/app_version.json
+++ b/public/app_version.json
@@ -1,9 +1,20 @@
 {
-    "latest_version": "1.2.0",
-    "minimum_version": "0.9.0",
-    "force_update": true,
-    "message": "Nova versão com correções importantes e melhorias de desempenho!",
-    "update_url_ios": "https://play.google.com/store/apps/details?id=br.com.app.gpu2907388.gpu56a2b15e2a377eaf273ff3023830b24d&pli=1",
-    "update_url_android": "https://play.google.com/store/apps/details?id=br.com.app.gpu2907388.gpu56a2b15e2a377eaf273ff3023830b24d&pli=1"
+  "force_update": true,
+
+  "ios": {
+    "minimum_version": "13.0.3",
+    "minimum_build": 130008,
+    "store_url": "https://apps.apple.com/br/app/ao-gosto-carnes/id6444686962"
+  },
+
+  "android": {
+    "minimum_version": "13.0.3",
+    "minimum_build": 130008,
+    "store_url": "https://play.google.com/store/apps/details?id=br.com.app.gpu2907388.gpu56a2b15e2a377eaf273ff3023830b24d"
+  },
+
+  "messages": {
+    "title": "Atualização obrigatória",
+    "body": "Atualize para continuar usando o app."
   }
-  
+}
