--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ao_gosto_app
 description: "O app oficial da Ao Gosto Carnes — sua boutique de carnes premium em Belo Horizonte. Peça seus cortes favoritos, kits de churrasco e produtos exclusivos com poucos toques. Experiência gourmet, entrega expressa e o verdadeiro sabor ao seu gosto."
 publish_to: 'none'
-version: 1.0.0+11
+version: 13.0.3+130008
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  # CORE
   http: ^1.2.0
   google_fonts: ^6.2.1
   carousel_slider: ^5.1.1
@@ -18,29 +20,34 @@ dependencies:
   mask_text_input_formatter: ^2.8.0
   provider: ^6.0.5
   url_launcher: ^6.3.2
-  cloud_firestore: ^4.16.1
-  firebase_core: ^2.32.0
+  collection: ^1.18.0
+  cached_network_image: ^3.3.1
   lottie: ^3.1.0
   image_picker: ^1.2.1
   permission_handler: ^11.3.1
   device_info_plus: ^10.1.0
-  collection: ^1.18.0
   geolocator: ^14.0.2
-  cached_network_image: ^3.3.1
-  
+
+  # FIREBASE — VERSÕES 100% COMPATÍVEIS ENTRE SI
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
+  cloud_firestore: ^5.4.3
+
+  # NOTIFICAÇÕES LOCAIS + OVERLAY
+  flutter_local_notifications: ^17.2.2
+  overlay_support: ^2.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
 
-  # 🔹 Geração automática de ícones (Android e iOS)
+  # Geração automática de ícones
   flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
 
-  # 🔹 Diretórios de assets (ícones e imagens gerais)
   assets:
     - assets/icon/
     - assets/icon/app_icon.png
@@ -49,7 +56,6 @@ flutter:
     - assets/images/categories/
     - assets/lottie/
 
-# 🔹 Configuração do flutter_launcher_icons
 flutter_icons:
   android: true
   ios: true
