--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
   cloud_firestore: ^5.4.3
+  package_info_plus: ^8.3.1
 
   # NOTIFICAÇÕES LOCAIS + OVERLAY
   flutter_local_notifications: ^17.2.2
